Styles: fixed titles on mobile

--- a/client/src/Components/ConfirmGameModal/confirmGame.scss
+++ b/client/src/Components/ConfirmGameModal/confirmGame.scss
@@ -25,6 +25,7 @@
         #confirmation-title {
             color: $tertiaryColor;
             font-size: 2.5em;
+            word-break: break-word;
         }
         .player-names-confirmation {
             font-size: 2em;
