--- a/client/src/Pages/MyGames/myGames.scss
+++ b/client/src/Pages/MyGames/myGames.scss
@@ -51,6 +51,7 @@
         h4 {
             font-size: 1.8em;
             margin-right: 20px;
+            word-break: break-word;
         }
 
         #play-btn {
